css/style.css
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css");
:root {
  background-color: #000;
}
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-style: normal;
  font-variant-ligatures: normal;
  font-variant-caps: normal;
  font-variant-numeric: normal;
  font-variant-east-asian: normal;
  font-weight: normal;
  font-stretch: normal;
  font-family: Montserrat, Montserrat, sans-serif;
}

/* ------------------- Action Bar */
.action-bar {
  background-color: #0E1116;
  color: white;
  display: flex;
  justify-content: space-between;
  padding: 18px;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
  align-items: center;
}
.action-bar label .bi {
  font-size: 18pt;
}
.action-bar label {
  z-index: 3;
}

/* Meun */
#toggle-menu:checked ~ .side-menu {
  right: 0;
}

/* ------------- Presentation */
.presentation {
  padding: 18px;
  width: 100%;
}
.presentation article h1 .bi {
  padding-right: 12px;
}
.presentation article h1 {
  font-weight: 450;
  font-size: 18pt;
  color: #F1FFE7;
  font-weight: 380;
  padding-bottom: 14px;
}
.presentation article {
  background-color: #0E1116;
  border-radius: 5px;
  padding: 24px;
  margin-top: 14px;
}
.presentation article p {
  color: rgb(170, 170, 170);
  font-weight: 380;

}

/* ------------- Card Project */
.card-project {
  margin: 25px;
  background-color: #181D25;
  padding: 15px;
  border-radius: 5px;
}
.card-project .card-content .card-title {
  font-size: 14pt;
  font-weight: 380;
  text-align: center;
}
.card-project .card-content .card-text {
  font-size: 10pt;
  color: rgb(170, 170, 170);
  font-weight: 380;
  padding-top: 8px;
}
.card-project .card-content {
  padding: 10px;
  color: white;
  height: 130px;
}
.card-project .card-action .card-link {
  background-color: #E1F2FE;
  color: black;
  text-decoration: none;
  border-radius: 5px;
  padding: 12px 16px 12px 16px;
  display: block;
  margin-top: 8px;
  width: 100%;
  text-align: center;
}
.card-project .card-image {
  width: 100%;
  height: 200px;
  background-position: center;
  background-size: cover;
}

/* ------------- Banner */
.banner h1 {
  background-color: rgba(0, 0, 0, 0.6);
  text-align: center;
  color: white;
  width: 100%;
  padding: 15px 0 15px 0;
  font-weight: 290;
}
.banner {
  display: flex;
  align-items: flex-end;
  background-image: url(../assets/james-webb.webp);
  height: 50vh;
  background-position: center;
  background-size: cover;
}

/* ------------- Title Separations */
.title-sep:nth-child(1) {
  margin-top: 45px;
}
.title-sep {
  color: white;
  text-align: center;
  padding: 15px;
  border-bottom: 1px solid white;
  margin: 15px;
  font-size: 28pt;
  font-weight: 380;
}

/* ------------- Main Footer */
.main-footer {
  background-color: rgb(12, 12, 12);
  color: white;
  text-align: center;
  padding: 24px 12px 24px 12px;
  font-size: 8pt;
}

/* ------------- Drafts */
.warining-draft {
  color: rgb(99, 99, 99);
  text-align: center;
  max-width: 700px;
  margin: auto;
  padding: 0 10px 0 10px;
  font-size: 9pt;
  padding-bottom: 24px;
}
.footer-tools-draft {
  color: #CAFE48;
  font-size: 8pt;
  text-align: center;
}

/* ------------- PC Adjust Responsive */
@media screen and (min-device-width: 600px) {
  .bars {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }
  .banner {
    height: 70vh;
  }
  .cards {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
  }
  .presentation {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 20px;
  }
  .side-menu {
    width: 30vw;
  }
}

/* ------------- Preogress Bar */
.progress {
  background-color: #252525;
  margin: 10px 20px 10px 20px;
  border-radius: 5px;
}

.progress .bar {
  border-radius: 5px;
  background-color: #FFF;
  padding: 2px 12px 2px 12px;
  font-size: 9pt;
}
.bars {
  max-width: 800px;
  margin: auto;
}

/* ------------- Side Menu */
.side-menu .options .option a:hover {
  background-color: #242b38;
}
.side-menu .options .option a {
  color: white;
  text-decoration: none;
  display: grid;
  grid-template-columns: 0fr 10fr 0fr;
  padding: 15px 20px 15px 20px;
  width: 70vw;
  background-color: #0E1116;
  margin-bottom: 5px;
  font-weight: 380;
}
.side-menu .options .option a .bi {
  padding-right: 10px;
}
.side-menu .options .option {
  color: grey;
  list-style: none;
}
.side-menu .menu-footer {
  position: relative;
  text-align: center;
  font-size: 8pt;
  text-decoration: underline;
  color: white;
}
.side-menu {
  position: fixed;
  background-color: #000;
  height: 100vh;
  padding-bottom: 80px;
  top: 0;
  transition-duration: 1s;
  right: -500px;
  padding-top: 80px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  box-shadow: 0 0 5px rgba(255, 255, 255, 0.2);
}

